// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FileListInput /> error renders 1`] = `
<div>
  <label
    for="form-0_mock"
  >
    Example
  </label>
  <input
    aria-describedby="form-0_mock--error"
    id="form-0_mock"
    multiple=""
    type="file"
  />
  <span
    id="form-0_mock--error"
    role="alert"
  >
    Error
  </span>
</div>
`;

exports[`<FileListInput /> help renders 1`] = `
<div>
  <label
    for="form-0_mock"
  >
    Example
    <span>
      Help
    </span>
  </label>
  <input
    id="form-0_mock"
    multiple=""
    type="file"
  />
</div>
`;

exports[`<FileListInput /> label renders 1`] = `
<div>
  <label
    for="form-0_mock"
  >
    Label
  </label>
  <input
    id="form-0_mock"
    multiple=""
    type="file"
  />
</div>
`;

exports[`<FileListInput /> renders 1`] = `
<div>
  <label
    for="form-0_mock"
  >
    Example
  </label>
  <input
    id="form-0_mock"
    multiple=""
    type="file"
  />
</div>
`;
